apply animations, fix video alignment

--- a/src/app/modules/pages/home/home.component.scss
+++ b/src/app/modules/pages/home/home.component.scss
@@ -13,12 +13,22 @@
 
 
 .video-fullscreen {
+  overflow: hidden;
   position: absolute;
-  right: 0;
-  bottom: 0;
-  min-width: 100vw;
-  min-height: 100vh;
+
+  width: 100%;
+  height: 100%;
   z-index: 4;
+  animation: fade-in .5s ease;
+
+  video {
+    min-width: 100vw;
+    min-height: 100vh;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .home-card {
@@ -26,19 +36,4 @@
   padding: 2rem;
   background-color: transparentize($color: darken($dim, 15), $amount: .1);
   box-shadow: transparentize($color: black, $amount: .3) 0 0 1.6rem;
-  animation: fade-in-up-delayed 2.4s normal 0s ease;
-}
-
-@keyframes fade-in-up-delayed {
-
-  0%,
-  45% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
 }
